--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,5 @@
-@import "./variables.scss";
-@import "./base.scss";
-@import "./columns.scss";
-@import "./components/header.scss";
+@import "./variables";
+@import "./base";
+@import "./columns";
+@import "./components/header";
+@import "./components/hero";
