--- a/css/index.css
+++ b/css/index.css
@@ -39,12 +39,25 @@ h1, h2, h3, h4, h5, h6 {
   flex-wrap: wrap;
 }
 
+.subtitle {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 33px;
+  color: #BDBDBD;
+  padding: 140px 0 40px;
+}
+
 .col-4 {
   width: 33.33%;
 }
 
 .col-5 {
-  width: 41.76%;
+  width: 41.66%;
+}
+
+.col-6 {
+  width: 50%;
 }
 
 .col-7 {
@@ -159,13 +172,9 @@ h1, h2, h3, h4, h5, h6 {
   color: #005FA3;
 }
 
-.services__subtitle {
-  font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 33px;
-  color: #BDBDBD;
-  padding: 140px 0 40px;
+.services {
+  background-color: #BDBDBD;
+  padding-bottom: 110px;
 }
 
 .services__title {
@@ -210,5 +219,67 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   bottom: 45px;
   left: 45px;
+}
+
+.about__title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 69px;
+  color: #222222;
+  padding-bottom: 60px;
+}
+
+.about__title span {
+  color: #005FA3;
+}
+
+.about__description {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 25px;
+  color: #000000;
+}
+
+.about__right {
+  display: inline-flex;
+  justify-content: flex-end;
+}
+
+.about__items {
+  max-width: 255px;
+  max-height: 255px;
+  background-color: #EBEBEB;
+  padding-left: 40px;
+}
+
+.about__number {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 55px;
+  line-height: 66px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #000000;
+  padding-top: 30px;
+}
+
+.about__text {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  color: #000000;
+  padding: 30px 100px 47px 0;
+}
+
+.about__link {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  text-decoration-line: underline;
+  color: #005FA3;
 }
 /*# sourceMappingURL=index.css.map */
