--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -38,3 +38,12 @@
     display: flex;
     flex-wrap: wrap;
   }
+
+  .subtitle{
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 33px;
+    color: $color-gray;
+    padding: 140px 0 40px;
+}
