--- a/scss/_columns.scss
+++ b/scss/_columns.scss
@@ -5,9 +5,11 @@
     width: 33.33%;
 }
 .col-5 {
-    width: 41.76%;
+    width: 41.66%;
 }
-// .col-6 {}
+.col-6 {
+    width: 50%;
+}
 .col-7 {
     width: 58.33%;
 }
