--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -1,12 +1,6 @@
 .services{
-    &__subtitle{
-        font-style: normal;
-        font-weight: 900;
-        font-size: 24px;
-        line-height: 33px;
-        color: $color-gray;
-        padding: 140px 0 40px;
-    }
+    background-color: $color-gray;
+    padding-bottom: 110px;
     &__title{
         font-style: normal;
         font-weight: 900;
