add 'about' and 'clients'

--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -1,5 +1,5 @@
 .services{
-    background-color: $color-gray;
+    background-color: #EBEBEB;
     padding-bottom: 110px;
     &__title{
         font-style: normal;
