--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .services {
-  background-color: #BDBDBD;
+  background-color: #EBEBEB;
   padding-bottom: 110px;
 }
 
@@ -245,6 +245,8 @@ h1, h2, h3, h4, h5, h6 {
 .about__right {
   display: inline-flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
+  padding-bottom: 140px;
 }
 
 .about__items {
@@ -252,6 +254,21 @@ h1, h2, h3, h4, h5, h6 {
   max-height: 255px;
   background-color: #EBEBEB;
   padding-left: 40px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  transition: 0.3s;
+}
+
+.about__items:nth-child(2n) {
+  margin-right: 0;
+}
+
+.about__items:hover {
+  background-color: #005FA3;
+}
+
+.about__items:hover .about__number, .about__items:hover .about__text, .about__items:hover .about__link {
+  color: #fff;
 }
 
 .about__number {
@@ -263,6 +280,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   color: #000000;
   padding-top: 30px;
+  transition: 0.3s;
 }
 
 .about__text {
@@ -272,6 +290,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 18px;
   color: #000000;
   padding: 30px 100px 47px 0;
+  transition: 0.3s;
 }
 
 .about__link {
@@ -281,5 +300,29 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 17px;
   text-decoration-line: underline;
   color: #005FA3;
+  padding-bottom: 40px;
+  transition: 0.3s;
+}
+
+.clients {
+  background-color: #EBEBEB;
+}
+
+.clients__title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 69px;
+  color: #333333;
+  margin-bottom: 80px;
+}
+
+.clients__content {
+  display: flex !important;
+  justify-content: space-between !important;
+}
+
+.clients__items {
+  padding-bottom: 210px;
 }
 /*# sourceMappingURL=index.css.map */
