--- a/css/slick.css
+++ b/css/slick.css
@@ -123,7 +123,7 @@
     display: flex !important;
     align-items: center;
 }
-
+/* hero */
 .slick-arrow{
     position: absolute;
     z-index: 20;
@@ -152,4 +152,80 @@
     background-size: 12px;
     background-position: center;
     box-sizing: border-box;
+}
+
+.slick-dots{
+    position: absolute;
+    display: flex;
+    font-size: 0;
+    bottom: 113px;
+    left: 20%;
+}
+
+.slick-dots button{
+    margin-right: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.4;
+    width: 10px;
+    height: 10px;
+    font-size: 0;
+}
+
+.slick-dots .slick-active button {
+    border: none;
+    outline: none;
+    opacity: 1;
+}
+
+/* clients */
+
+.clients__items .slick-arrow{
+    position: absolute;
+    z-index: 20;
+    width: 60px;
+    height: 60px;
+    font-size: 0;
+    bottom: 20%;
+    right: 0;
+    background-color:#005FA3;
+    opacity: 0.2;
+    border: none;
+    outline: none;
+}
+
+.clients__items .slick-arrow.slick-prev{
+    right: 60px;
+}
+
+.clients__items .slick-arrow.slick-prev:hover{
+    opacity: 1;
+}
+
+.clients__items .slick-arrow.slick-next:hover{
+    opacity: 1;
+}
+
+.clients__items .slick-dots{
+    position: absolute;
+    display: flex;
+    font-size: 0;
+    bottom: 100px;
+    left: 0;
+}
+
+.clients__items .slick-dots button{
+    margin-right: 20px;
+    border-radius: 50%;
+    background-color: #005FA3;
+    opacity: 0.4;
+    width: 10px;
+    height: 10px;
+    font-size: 0;
+}
+
+.clients__items .slick-dots .slick-active button {
+    border: none;
+    outline: none;
+    opacity: 1;
 }
