--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -22,6 +22,8 @@
     &__right{
         display: inline-flex;
         justify-content: flex-end;
+        flex-wrap: wrap;
+        padding-bottom: 140px;
     }
 
     &__items{
@@ -29,6 +31,20 @@
         max-height: 255px;
         background-color: #EBEBEB;
         padding-left: 40px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+        transition: 0.3s;
+        &:nth-child(2n){
+            margin-right: 0;
+        }
+        &:hover{
+            background-color:$color-blue;
+            .about {
+                &__number, &__text, &__link{
+                    color: $color-white;
+                }
+            }
+        }
     }
 
     &__number{
@@ -40,7 +56,7 @@
         text-transform: uppercase;
         color: #000000;
         padding-top: 30px;
-        // padding-left: 40px;
+        transition: 0.3s;
     }
 
     &__text{
@@ -50,6 +66,7 @@
         line-height: 18px;
         color: #000000;
         padding: 30px 100px 47px 0;
+        transition: 0.3s;
     }
 
     &__link{
@@ -59,5 +76,7 @@
         line-height: 17px;
         text-decoration-line: underline;
         color: $color-blue;
+        padding-bottom: 40px;
+        transition: 0.3s;
     }
 }
