--- a/css/index.css
+++ b/css/index.css
@@ -131,20 +131,17 @@ h1, h2, h3, h4, h5, h6 {
 
 .hero {
   position: relative;
-  min-height: 670px;
-  width: 100%;
 }
 
-.hero__bg {
+.hero__block {
   background-image: url(../../images/hero.png);
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
+  min-height: 670px !important;
   width: 100%;
-  min-height: 670px;
 }
 
 .hero__title {
@@ -153,6 +150,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   color: #fff;
   max-width: 55%;
+  padding-top: 170px;
   margin-bottom: 80px;
 }
 
@@ -324,5 +322,54 @@ h1, h2, h3, h4, h5, h6 {
 
 .clients__items {
   padding-bottom: 210px;
+}
+
+.reviews__slider {
+  margin-bottom: 200px;
+}
+
+.reviews__title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 69px;
+  color: #222222;
+}
+
+.reviews__block {
+  background-color: #EBEBEB;
+  margin-top: 80px;
+}
+
+.reviews__content {
+  justify-content: flex-start;
+  align-items: center;
+  padding: 58px 0 45px 95px;
+}
+
+.reviews__description {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 25px;
+  color: #000;
+  padding: 45px 95px 0;
+}
+
+.reviews__name {
+  padding-bottom: 10px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 25px;
+  color: #000000;
+}
+
+.reviews__position {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #4F4F4F;
 }
 /*# sourceMappingURL=index.css.map */
