--- a/css/slick.css
+++ b/css/slick.css
@@ -137,6 +137,10 @@
     outline: none;
 }
 
+.slick-arrow:hover{
+    opacity: 1;
+}
+
 .slick-arrow.slick-prev{
     background-image: url("../images/arrow_left.svg");
     background-repeat: no-repeat;
@@ -165,6 +169,7 @@
 .slick-dots button{
     margin-right: 20px;
     border-radius: 50%;
+    border: none;
     background-color: #fff;
     opacity: 0.4;
     width: 10px;
@@ -217,6 +222,7 @@
 .clients__items .slick-dots button{
     margin-right: 20px;
     border-radius: 50%;
+    border: none;
     background-color: #005FA3;
     opacity: 0.4;
     width: 10px;
@@ -225,6 +231,58 @@
 }
 
 .clients__items .slick-dots .slick-active button {
+    border: none;
+    outline: none;
+    opacity: 1;
+}
+
+/* reviews */
+.reviews__items .slick-arrow{
+    position: absolute;
+    z-index: 20;
+    width: 60px;
+    height: 60px;
+    font-size: 0;
+    bottom: -100px;
+    right: 0;
+    background-color:#005FA3;
+    opacity: 0.2;
+    border: none;
+    outline: none;
+}
+
+.reviews__items .slick-arrow.slick-prev{
+    right: 60px;
+}
+
+.reviews__items .slick-arrow.slick-prev:hover{
+    opacity: 1;
+}
+
+.reviews__items .slick-arrow.slick-next:hover{
+    opacity: 1;
+}
+
+.reviews__items .slick-dots{
+    position: absolute;
+    display: flex;
+    font-size: 0;
+    bottom: -100px;
+    left: 0;
+}
+
+.reviews__items .slick-dots button{
+    margin-right: 20px;
+    border-radius: 50%;
+    border: none;
+    background-color: #005FA3;
+    opacity: 0.4;
+    width: 10px;
+    height: 10px;
+    font-size: 0;
+}
+
+.reviews__items .slick-dots .slick-active button {
     border: none;
     outline: none;
     opacity: 1;
