--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,17 +1,14 @@
 .hero{
     position: relative;
-    min-height: 670px;
-    width: 100%;
-    &__bg{
+    &__block{
         background-image: url(../../images/hero.png);
         background-repeat: no-repeat;
         background-size: cover;
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
+        min-height: 670px !important;
         width: 100%;
-        min-height: 670px;
     }
 
     &__title{
@@ -20,6 +17,7 @@
     font-size: 48px;
     color: $color-white;
     max-width: 55%;
+    padding-top: 170px;
     margin-bottom: 80px;
     }
 
