--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,3 +7,5 @@
 @import "./components/about";
 @import "./components/clients";
 @import "./components/reviews";
+@import "./components/contacts";
+@import "./components/footer";
