--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,14 +1,18 @@
 .hero{
     position: relative;
-    &__block{
+    min-height: 670px;
+    &__bg{
         background-image: url(../../images/hero.png);
         background-repeat: no-repeat;
         background-size: cover;
         position: absolute;
         top: 0;
         left: 0;
-        min-height: 670px !important;
         width: 100%;
+    }
+
+    &__items{
+        min-height: 670px;
     }
 
     &__title{
@@ -30,6 +34,7 @@
         line-height: 25px;
         text-align: center;
         padding: 19px 55px;
+        transition: 0.3s;
         &:hover{
             background-color: $color-white;
             color: $color-blue;
