--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,7 +2,7 @@
     position: relative;
     min-height: 670px;
     &__bg{
-        background-image: url(../../images/hero.png);
+        background-image: url('../images/hero.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: absolute;
